--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {deps, [
-{cowlib,".*",{git,"https://github.com/ninenines/cowlib","master"}},{ranch,".*",{git,"https://github.com/ninenines/ranch","1.7.1"}}
-]}.
+        {cowlib,".*",{git,"https://github.com/ninenines/cowlib","master"}},
+        {ranch,".*",{git,"https://github.com/ninenines/ranch","master"}}
+       ]}.
 {erl_opts, [debug_info,warn_export_vars,warn_shadow_vars,warn_obsolete_guard,warn_missing_spec,warn_untyped_record]}.
